--- a/about.html
+++ b/about.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon">
     <link href="./src/output.css" rel="stylesheet">
     <link rel="stylesheet" href="./src/input.css">
@@ -11,33 +14,148 @@
     <title>About Us | Bhavesh Suthar | Frontend Developer | Building Accessible & User-Friendly Websites</title>
 </head>
 
-<body>
-    <div class="container max-w-8xl mx-auto">
-        <section class="about-me">
+<body class="bg-black">
+    <div class="container md:max-w-8xl md:mx-auto">
+        <header>
+            <nav class="p-5 flex justify-between items-center">
+                <div class="flex items-center">
+                    <a href="index.html" class="flex items-center gap-3">
+                        <img src="src/img/logo.png" alt="logo" class="w-10 h-10 invert-100">
+                        <p class="text-white font-bebas uppercase text-2xl">Bhavesh Suthar</p>
+                    </a>
+                </div>
+                <div class="block md:hidden menu" onclick="togglemenu()">
+                    <img src="/src/img/menu.png" alt="menu" class="size-7 filter invert menuOpen">
+                </div>
+                <div class="mobile-nav hidden md:flex">
+                    <ul class="md:items-center gap-10 md:flex">
+                        <li><a href="#project" class="text-white md:text-xl text-2xl">Work</a></li>
+                        <li><a href="about.html" class="text-white md:text-xl text-2xl">About</a></li>
+                        <li><a href="#contactME" class="text-white md:text-xl text-2xl">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+
+    </div>
+    <div class="container md:max-w-8xl md:mx-auto">
+        <section class="about-me mt-34">
             <div
-                class="about-me-content max-w-7xl mx-auto md:flex block flex-col md:flex-row p-6 text-white gap-64.25 justify-between">
-                <div class="about-heading flex ">
+                class="about-me-content max-w-7xl mx-auto md:flex block flex-col md:flex-row p-6 text-white md:gap-64.25 md:justify-between gap-9">
+                <div class="about-heading flex mb-5">
                     <h2 class="md:text-6xl text-5xl uppercase font-bebas tracking-wider font-light w-52">
                         About Me
                     </h2>
                 </div>
-                <div class="about-para">
-                    <h4 class="text-3xl pb-3">I am a Frontend Developer based in india. Has Information Technology
+                <div class="about-para md:flex md:flex-col gap-13.25 sm:mt-4">
+                    <h4 class="text-2xl mb-5">I am a Frontend Developer based in india. Has Information Technology
                         Background</h4>
-                    <p class="text-gray-400">I am a front-end developer based in india looking for exciting
+                    <p class="text-gray-400 mb-5">I am a front-end developer based in india looking for exciting
                         opportunities. Has Information
                         Technology background. Likes to focus on accessibility when developing. Passionate and curious
                         about solving problems. Currently, I’m exploring Reactjs, Webflow and a bit of Designing. While
                         I am not programming, I enjoy playing Singing, acting etc. Learning more
                         to improve skill.</p>
 
-                    <a href="./src/about.html" class="pt-13.25">More About Me</a>
+                    <div class="flex w-full gap-4 items-center">
+                        <a href="src/Document/Bhavesh Resume.pdf" download="resume-bhavesh.pdf"
+                            class="text-black font-medium bg-[#D3E97A] w-50.5 p-2 h-12 rounded-3xl flex items-center gap-3">Download
+                            Resume <i
+                                class="fa-solid fa-download text-2xl text-black p-2 rounded-full flex justify-center items-center"></i></a>
+
+                        <a href="https://github.com/suthar-bhavesh"
+                            class="cursor-pointer bg-[#222222] p-3 rounded-full"><i
+                                class="fa-brands fa-github text-[#D3E97A] text-2xl"></i></a>
+
+                        <a href="https://www.linkedin.com/in/bhavesh-suthar-401925280/"
+                            class="cursor-pointer bg-[#222222] p-3 rounded-full"><i
+                                class="fa-brands fa-linkedin text-[#D3E97A] text-2xl"></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="container md:max-w-8xl md:mx-auto">
+        <section class="about-me mt-15">
+            <div
+                class="about-me-content max-w-7xl mx-auto md:flex block flex-col md:flex-row p-6 text-white md:gap-64.25 md:justify-between gap-9">
+                <div class="about-heading flex mb-5">
+                    <h2 class="md:text-6xl text-5xl uppercase font-bebas tracking-wider font-light w-70">
+                        My Capabilities
+                    </h2>
+                </div>
+                <div class="about-para md:flex md:flex-col gap-13.25 sm:mt-4">
+                    <p class="text-gray-400 mb-5">I'm always learning and pushing myself toward new achievements.
+                        Keeping up with the latest technology gives me the freedom to adapt and keeps my skills sharp.
+                    </p>
+
+                    <div class="flex w-full gap-4 items-center">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <hr class="text-[#343a40] mt-20 mb-20">
+
+    <div class="container md:max-w-8xl md:mx-auto" id="contactME">
+        <section class="contact-form">
+            <div
+                class="form-content max-w-7xl mx-auto md:flex block flex-col md:flex-row p-6 text-white md:gap-64.25 md:justify-between gap-9">
+                <div class="about-heading flex gap-10 flex-col">
+                    <h2 class="md:text-6xl text-5xl uppercase font-bebas tracking-wider font-light w-80">
+                        Let's Connect
+                    </h2>
+                    <div class="social-link flex items-center gap-2">
+                        <a href="https://github.com/suthar-bhavesh"><i
+                                class="fa-brands fa-github text-[#D3E97A] text-2xl"></i></a>
+                        <a href="https://www.linkedin.com/in/bhavesh-suthar-401925280/"><i
+                                class="fa-brands fa-linkedin text-[#D3E97A] text-2xl"></i></a>
+                        <a href="https://x.com/Bhavesh37820418"><i
+                                class="fa-brands fa-x-twitter text-[#D3E97A] text-2xl"></i></a>
+                        <a href="https://hosturl.info/31UQuC"><i
+                                class="fa-brands fa-instagram text-[#D3E97A] text-2xl"></i></a>
+                    </div>
+                </div>
+                <div class="main-form md:flex md:flex-col gap-13.25 sm:mt-4">
+                    <form action="#" method="get" class="w-150 h-152.50">
+                        <div class="contactFields flex flex-col mb-6 gap-2 w-full">
+                            <label for="fullname" class="text-gray-200 font-light">Full Name</label>
+                            <input type="text" placeholder="john Doe" name="fullname" id="fullname"
+                                class="bg-[#1A1A1A] p-3 outline-0 rounded-l-lg" required>
+                        </div>
+
+                        <div class="contactFields flex flex-col mb-6 gap-2">
+                            <label for="email" class="text-gray-200 font-light">Email</label>
+                            <input type="email" placeholder="example@gmail.com" name="email" id="email"
+                                class="bg-[#1A1A1A] p-3 outline-0 rounded-l-lg" required>
+                        </div>
+
+                        <div class="contactFields flex flex-col mb-6 gap-2">
+                            <label for="subject" class="text-gray-200 font-light">Subject</label>
+                            <input type="text" placeholder="Message Subject" name="subject" id="subject"
+                                class="bg-[#1A1A1A] p-3 outline-0 rounded-lg" required>
+                        </div>
+
+                        <div class="contactFields flex flex-col mb-6 gap-2">
+                            <label for="message" class="text-gray-200 font-light">Message</label>
+                            <textarea name="message" id="message" cols="30" rows="10"
+                                class="bg-[#1A1A1A] p-3 outline-0 rounded-l-lg" placeholder="Type here your Message..."
+                                required></textarea>
+                        </div>
+
+                        <button type="submit"
+                            class="mt-10 bg-[#D3E97A] text-black p-3 rounded-4xl w-30 font-medium cursor-pointer">Submit</button>
+                    </form>
                 </div>
             </div>
         </section>
     </div>
 
-    <script src="src/script.js"></script>
+    <div class="footer-developer-sign flex justify-center items-center">
+        <p class="text-gray-800">@ 2026 Bhavesh Suthar</p>
+    </div>
+    <script src="./src/script.js"></script>
 </body>
 
 </html>
