--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="mobile-nav hidden md:flex">
                     <ul class="md:items-center gap-10 md:flex">
-                        <li><a href="#project" class="text-white md:text-xl text-2xl">Work</a></li>
+                        <li><a href="#work" class="text-white md:text-xl text-2xl">Work</a></li>
                         <li><a href="about.html" class="text-white md:text-xl text-2xl">About</a></li>
                         <li><a href="#contactME" class="text-white md:text-xl text-2xl">Contact</a></li>
                     </ul>
