--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
 <body class="bg-black">
     <div class="container md:max-w-8xl md:mx-auto">
-        <header>
+        <header class="fixed bg-black top-0 w-full md:w-0">
             <nav class="p-5 flex justify-between items-center">
                 <div class="flex items-center">
                     <a href="index.html" class="flex items-center gap-3">
@@ -24,14 +24,16 @@
                         <p class="text-white font-bebas uppercase text-2xl">Bhavesh Suthar</p>
                     </a>
                 </div>
-                <div class="block md:hidden menu" onclick="togglemenu()">
+                <div class="block md:hidden menu z-99999" onclick="togglemenu()">
                     <img src="/src/img/menu.png" alt="menu" class="size-7 filter invert menuOpen">
                 </div>
-                <div class="mobile-nav hidden md:flex">
-                    <ul class="md:items-center gap-10 md:flex">
-                        <li><a href="#work" class="text-white md:text-xl text-2xl">Work</a></li>
-                        <li><a href="about.html" class="text-white md:text-xl text-2xl">About</a></li>
-                        <li><a href="#contactME" class="text-white md:text-xl text-2xl">Contact</a></li>
+                <div id="mobile-nav" class="mobile-nav hidden md:flex">
+                    <ul class="flex items-center gap-8 md:gap-10 flex-col mt-31 w-full h-full md:mt-0 md:flex-row">
+                        <li><a href="#work" class="text-white text-2xl md:text-xl">Work</a></li>
+                        <li><a href="about.html" class="text-white text-2xl md:text-xl">About</a>
+                        </li>
+                        <li><a href="#contactME" class="text-white text-2xl md:text-xl">Contact</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -40,24 +42,26 @@
     </div>
     <div class="container md:max-w-8xl md:mx-auto">
         <section class="about-me mt-34">
-            <div
-                class="about-me-content max-w-7xl mx-auto md:flex block flex-col md:flex-row p-6 text-white md:gap-64.25 md:justify-between gap-9">
-                <div class="about-heading flex mb-5">
-                    <h2 class="md:text-6xl text-5xl uppercase font-bebas tracking-wider font-light w-52">
+            <div class="about-me-content max-w-7xl mx-auto md:flex md:justify-between gap-8 p-6 md:items-center">
+                <div class=" about-heading flex mb-5">
+                    <h2 class="md:text-6xl text-5xl uppercase font-bebas tracking-wider font-light w-52 text-white">
                         About Me
                     </h2>
                 </div>
-                <div class="about-para md:flex md:flex-col gap-13.25 sm:mt-4">
-                    <h4 class="text-2xl mb-5">I am a Frontend Developer based in india. Has Information Technology
+                <div class="about-para md:flex md:flex-col gap-13 w-full md:gap-0 md:w-181">
+                    <h4 class="text-2xl mb-5 text-white">I am a Frontend Developer based in india. Has Information
+                        Technology
                         Background</h4>
-                    <p class="text-gray-400 mb-5">I am a front-end developer based in india looking for exciting
+                    <p class="text-gray-400 mb-5 text-justify md:text-[14px]">I am a front-end developer based in india
+                        looking for
+                        exciting
                         opportunities. Has Information
                         Technology background. Likes to focus on accessibility when developing. Passionate and curious
                         about solving problems. Currently, I’m exploring Reactjs, Webflow and a bit of Designing. While
                         I am not programming, I enjoy playing Singing, acting etc. Learning more
                         to improve skill.</p>
 
-                    <div class="flex w-full gap-4 items-center">
+                    <div class="flex w-full gap-4 items-center mt-6">
                         <a href="src/Document/Bhavesh Resume.pdf" download="resume-bhavesh.pdf"
                             class="text-black font-medium bg-[#D3E97A] w-50.5 p-2 h-12 rounded-3xl flex items-center gap-3">Download
                             Resume <i
@@ -98,10 +102,10 @@
     </div>
     <hr class="text-[#343a40] mt-20 mb-20">
 
-    <div class="container md:max-w-8xl md:mx-auto" id="contactME">
+    <div class="container md:max-w-8xl md:mx-auto" id="contactme">
         <section class="contact-form">
             <div
-                class="form-content max-w-7xl mx-auto md:flex block flex-col md:flex-row p-6 text-white md:gap-64.25 md:justify-between gap-9">
+                class="form-content max-w-7xl mx-auto md:flex flex-col p-6 text-white md:gap-8 md:justify-between gap-9">
                 <div class="about-heading flex gap-10 flex-col">
                     <h2 class="md:text-6xl text-5xl uppercase font-bebas tracking-wider font-light w-80">
                         Let's Connect
@@ -117,8 +121,8 @@
                                 class="fa-brands fa-instagram text-[#D3E97A] text-2xl"></i></a>
                     </div>
                 </div>
-                <div class="main-form md:flex md:flex-col gap-13.25 sm:mt-4">
-                    <form action="#" method="get" class="w-150 h-152.50">
+                <div class="main-form md:flex md:flex-col gap-13 md:mt-14">
+                    <form action="#" method="get" class="md:w-full w-full">
                         <div class="contactFields flex flex-col mb-6 gap-2 w-full">
                             <label for="fullname" class="text-gray-200 font-light">Full Name</label>
                             <input type="text" placeholder="john Doe" name="fullname" id="fullname"
